# Trisualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Trisualizer.rc  Trisualizer.sln  Trisualizer.vcxproj  Trisualizer.vcxproj.filters  main.cpp  resource.h
include/: bmp_read.hpp
shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/: main.cpp
